# Drive

./: .gitignore  Drive-YOLO-S+.ipynb  Drive-YOLO-S-Nano.ipynb  README.md  pyproject.toml  requirements.txt
Drive-KD/: .gitignore  README.md  pyproject.toml  requirements.txt  run_project.py  run_smoke.py
Drive-KD/configs/dataset/: bdd100k_local.yaml
Drive-KD/configs/experiments/: exp_000_teacher_segformer_b1.yaml  exp_001_teacher_cache.yaml  exp_002_student_effb0_full_kd.yaml
Drive-KD/configs/kd/: kd_full.yaml
Drive-KD/configs/smoke/: bdd100k_local_smoke.yaml  drive_effb0_bifpn_kd_smoke.yaml  exp_000_teacher_smoke.yaml  exp_001_teacher_cache_smoke.yaml  exp_002_student_effb0_full_kd_smoke.yaml  kd_full_smoke.yaml  segformer_b1_teacher_smoke.yaml
Drive-KD/configs/student/: drive_effb0_bifpn_kd.yaml
Drive-KD/configs/teacher/: segformer_b1_cache.yaml  segformer_b1_teacher.yaml
Drive-KD/data/manifests/: val_absolute.csv
Drive-KD/drive_kd/: __init__.py
Drive-KD/drive_kd/datasets/: __init__.py  collate.py  drive_kd_dataset.py  drive_supervised_dataset.py  manifest_utils.py  path_resolver.py  teacher_cache_dataset.py  transforms.py
Drive-KD/drive_kd/engine/: __init__.py  amp_utils.py  cache_teacher_outputs.py  checkpointing.py  evaluate_model.py  infer_teacher.py  resume.py  train_student_kd.py  train_teacher.py  validate.py
Drive-KD/drive_kd/kd/: __init__.py  attention_kd.py  boundary_kd.py  feature_kd.py  kd_weight_scheduler.py  logit_kd.py  multitask_kd_loss.py  probability_kd.py  temperature.py
Drive-KD/drive_kd/losses/: __init__.py  boundary_loss.py  class_balanced_loss.py  dice_loss.py  focal_loss.py  supervised_multitask_loss.py
Drive-KD/drive_kd/metrics/: __init__.py  boundary_metrics.py  efficiency_metrics.py  evaluator.py  lane_metrics.py  road_metrics.py  segmentation_metrics.py
Drive-KD/drive_kd/models/: __init__.py
Drive-KD/drive_kd/models/common/: __init__.py  attention.py  bifpn_lite.py  conv.py  heads.py  initialization.py  sppf.py  weighted_fusion.py
Drive-KD/drive_kd/models/students/: __init__.py  drive_effb0_bifpn.py  drive_effb0_bifpn_kd.py  effb0_outputs.py  efficientnet_b0_encoder.py  efficientnet_feature_extractor.py  student_registry.py
Drive-KD/drive_kd/models/teachers/: __init__.py  base_teacher.py  segformer_b1_teacher.py  segformer_decode_head.py  teacher_outputs.py  teacher_registry.py
Drive-KD/drive_kd/postprocess/: __init__.py  boundaries.py  lanes.py  masks.py  morphology.py  thresholds.py
Drive-KD/drive_kd/utils/: __init__.py  config.py  device.py  file_io.py  logging.py  profiler.py  seed.py  tensor_io.py
Drive-KD/drive_kd/visualisation/: __init__.py  attention_viz.py  compare_teacher_student.py  error_maps.py  overlays.py  save_grid.py
Drive-KD/scripts/: 00_build_absolute_manifests.py  01_check_dataset.py  02_train_teacher_segformer_b1.py  03_generate_teacher_cache.py  04_train_student_effb0_kd.py  05_evaluate_student.py  06_benchmark_fps.py  07_export_student.py
Drive-KD/tests/: test_dataset.py  test_imports.py  test_kd_losses.py  test_losses.py  test_metrics.py  test_student_forward.py  test_teacher_forward.py
configs/: dataset_bdd100k.yaml  stage1_drive_yolo_nano.yaml  stage1_drive_yolo_s.yaml
