[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drive"
version = "0.1.0"
description = "Drive: YOLO-family non-KD baseline for road segmentation, lane segmentation, and edge extraction."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Piyush Panda" }
]
keywords = [
    "computer-vision",
    "semantic-segmentation",
    "lane-detection",
    "road-segmentation",
    "yolo",
    "pytorch",
    "autonomous-driving"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing"
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "PyYAML>=6.0.0",
    "tqdm>=4.65.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "torchaudio>=2.2.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "albumentations>=1.4.0",
    "scikit-image>=0.22.0",
    "imageio>=2.31.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "tensorboard>=2.14.0",
    "rich>=13.0.0",
    "omegaconf>=2.3.0",
    "pydantic>=2.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0"
]

export = [
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0"
]

[project.urls]
Homepage = "https://github.com/your-username/Drive"
Repository = "https://github.com/your-username/Drive"
Issues = "https://github.com/your-username/Drive/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["drive*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["drive"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "C4",
    "SIM"
]
ignore = [
    "E501"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"